# yt-dlp-metadata2nfo

./: .env.example  README.md  pyproject.toml
src/: app.py
src/core/: config.py  handler.py
